<resources>
    <string name="err_default">Something went wrong!</string>

    <!-- About -->
    <string name="app_name">Lexicon</string>
    <string name="app_version">v1.0 rc1</string>
    <string name="dev_info">©2018\nArun K Babu</string>

    <!-- Main Activity -->
    <string name="cdesc_open_image">Open Image file</string>
    <string name="cdesc_capture_camera">Capture image from Camera</string>
    <string name="cdesc_saved_text">Show saved texts</string>
    <string name="open_image">Tap here to open an image</string>
    <string name="camera_capture">Tap here to capture from camera</string>
    <string name="about_developer">About Developer</string>
    <string name="settings">Settings</string>
    <string name="saved_text">Saved Texts</string>
    <string name="camera_err">Sorry! This feature cannot run on your device as it don\'t have a camera</string>
    <string name="file_err">Unexpected error occurred while creating the File. Please make sure that you have sufficient storage space and try Again</string>

    <!-- SavedText Activity -->
    <string name="cdesc_share_text">Share this text</string>
    <string name="delete">DELETE</string>
    <string name="err_no_saved_text">Texts once saved will appear here</string>
    <string name="text_saved">Text Saved</string>
    <string name="text_deleted">Text Deleted</string>
    <string name="undo">Undo</string>

    <!-- Settings Activity -->
    <string name="enable_edge">Enable Edge</string>
    <string name="enable_edge_info">Activate Edge-Screen floating widget</string>
    <string name="launch_tutorial">Launch Tutorial</string>
    <string name="launch_tutorial_info">Start the app tutorial walkthrough</string>
    <string name="licenses">Licenses</string>
    <string name="about">About</string>
    <string name="about_info">About this App and Developer</string>
    <string name="err_gpu_incompatible">In case if the image appears distorted when capturing screen. Then this GPU isn\'t supported. In that case, please try to manually take a screenshot and share it with this app</string>

    <!-- Test Ad Ids -->
    <string name="test_banner_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_interstitial_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="test_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <!-- Extract Activity -->
    <string name="currently_active_image">Currently active Image</string>
    <string name="crop_or_rotate">Crop or Rotate</string>
    <string name="rotate">Rotate by 90°</string>
    <string name="open">Open</string>
    <string name="extract">Extract</string>
    <string name="capture">Capture</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="extracting_text">Extracting Text…</string>
    <string name="save">Save</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>
    <string name="share_with">Share with:</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="err_no_apps_found">Error! No Applications found to share text with</string>
    <string name="err_no_text_detected">No Text Detected</string>
    <string name="extract_failed">Extract Failed! The image not have loaded successfully. Please try again</string>
    <string name="err_dependency_unavailable">OCR Dependencies are not yet available. Please check your internet connection and wait for about 5 minutes. If that\'s not the case then please Update Google Play Services to the latest version</string>

    <!-- Permissions Activity -->
    <string name="skip">SKIP</string>
    <string name="close">CLOSE</string>
    <string name="grant_overlay_permission">GRANT OVERLAY PERMISSION</string>
    <string name="overlay_permission_required">Overlay Permission is required for starting Edge Screen; since it needs to float over other apps</string>

    <string name="extremely_long_text">This is an extremely long text
        \nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\n
        This is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\n
        This is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\n
        This is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\n
        This is an extremely long textThis is an extremely long text
        \nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\n
        This is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\n
        This is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\n
        This is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\n
        This is an extremely long textThis is an extremely long text
        \nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\n
        This is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\n
        This is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\n
        This is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\n
        This is an extremely long textThis is an extremely long text
        \nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\n
        This is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\n
        This is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\n
        This is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\nThis is an extremely long text\n
        End Extremely long text</string>

    <!-- Edge Screen Activity -->
    <string name="rectangle">Rectangle</string>
    <string name="oval">Oval</string>
    <string name="fullscreen">Full Screen</string>
    <string name="camera">Camera</string>
    <string name="permission_denied">Permission Denied</string>

    <!-- Tutorial -->
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="tr_title_1">Tired of Typing?</string>
    <string name="tr_desc_1">Lexicon is an optical character recognition application in which you can extract printed text from images.You can use your camera to take a photo or open an image from your storage</string>
    <string name="tr_title_2">Enable Edge Screen</string>
    <string name="tr_desc_2">Edge screen is a floating widget used to extract text from any screen on your device\n\nTo Enable: Go to Settings and Turn on "Enable Edge" switch</string>
    <string name="tr_title_3">Save your Text</string>
    <string name="tr_desc_3">Save the extracted text. So don\'t bother about losing your favourite passages</string>
    <string name="tr_title_4">Share Text</string>
    <string name="tr_desc_4">Share the extracted with third party apps. So that you can edit or make changes there</string>
    <string name="tap_here_to_open_settings">Tap here to Open Settings</string>
    <string name="success">Success</string>
    <string name="edge_activation_success">Edge Screen successfully enabled. Swipe (Right-to-Left) on the transparent bar to reveal Edge Screen\n\nClick Next to continue</string>

    <!-- Widgets -->
    <string name="no_saved_texts_found">No saved texts found!</string>"
</resources>
