<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_gravity="bottom">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageButton
            android:id="@+id/tbtn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/settings"
            android:padding="@dimen/padding_main_toolbar_btn"
            android:src="@drawable/ic_action_settings"
            android:tooltipText="@string/settings" />

        <ImageButton
            android:id="@+id/tbtn_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/about_developer"
            android:padding="@dimen/padding_main_toolbar_btn"
            android:src="@drawable/ic_action_info"
            android:tooltipText="@string/about_developer" />

        <ImageButton
            android:id="@+id/tbtn_saved_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/cdesc_saved_text"
            android:padding="@dimen/padding_main_toolbar_btn"
            android:src="@drawable/ic_action_saved"
            android:tooltipText="@string/saved_text" />
    </android.support.v7.widget.Toolbar>

</android.support.design.widget.AppBarLayout>