<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Enable Edge View -->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:paddingStart="30dp"
                android:paddingTop="30dp"
                android:paddingEnd="2dp"
                android:paddingBottom="30dp">

                <TextView
                    android:id="@+id/tv_enable_edge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_edge"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/tv_enable_edge_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_enable_edge_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/enable_edge_info"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_enable_edge" />

                <Switch
                    android:id="@+id/sw_enable_edge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="228dp" />
            </android.support.constraint.ConstraintLayout>

            <!-- Launch Tutorial View -->
            <LinearLayout
                android:id="@+id/launch_tutorial_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingTop="30dp"
                android:paddingEnd="2dp"
                android:paddingBottom="30dp">

                <TextView
                    android:id="@+id/tv_launch_tr_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/launch_tutorial"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_launch_tr_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:text="@string/launch_tutorial_info"
                    android:textSize="12sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <!-- Licenses View -->
            <LinearLayout
                android:id="@+id/licenses_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingTop="30dp"
                android:paddingEnd="2dp"
                android:paddingBottom="30dp">

                <TextView
                    android:id="@+id/tv_license_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/licenses"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_license_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:text="@string/licenses"
                    android:textSize="12sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <!-- About View -->
            <LinearLayout
                android:id="@+id/about_developer_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingTop="30dp"
                android:paddingEnd="2dp"
                android:paddingBottom="30dp">

                <TextView
                    android:id="@+id/tv_about_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/about"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_about_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:text="@string/about_info"
                    android:textSize="12sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/settings_banner_adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:elevation="1dp"
        ads:adSize="BANNER"
        android:visibility="gone"
        ads:adUnitId="@string/test_banner_ad_id" />

</RelativeLayout>